--- a/notebooks/etl.ipynb
+++ b/notebooks/etl.ipynb
@@ -61,11 +61,7 @@
    "outputs": [],
    "source": [
     "G = ox.graph_from_place(\n",
-    "    PLACE, \n",
-    "    retain_all=False, \n",
-    "    truncate_by_edge=True, \n",
-    "    simplify=True, \n",
-    "    network_type='drive'\n",
+    "    PLACE, retain_all=False, truncate_by_edge=True, simplify=True, network_type=\"drive\"\n",
     ")\n",
     "G = ox.project_graph(G)\n",
     "G = ox.add_edge_speeds(G)\n",
@@ -121,8 +117,10 @@
    "outputs": [],
    "source": [
     "def highlight_edge_in_graph(G: Graph, a: int, b: int):\n",
-    "    fig, ax = ox.plot_graph(G, show=False, close=False, edge_linewidth=0.5, node_size=0.8)\n",
-    "    ox.plot_graph_route(G, [a, b], route_linewidth=1.5, route_color='r', ax=ax)\n",
+    "    fig, ax = ox.plot_graph(\n",
+    "        G, show=False, close=False, edge_linewidth=0.5, node_size=0.8\n",
+    "    )\n",
+    "    ox.plot_graph_route(G, [a, b], route_linewidth=1.5, route_color=\"r\", ax=ax)\n",
     "    plt.show()"
    ]
   },
@@ -188,9 +186,9 @@
     }
    ],
    "source": [
-    "inpath = '../data/google_transit_manhattan.zip'\n",
+    "inpath = \"../data/google_transit_manhattan.zip\"\n",
     "service_ids = ptg.read_busiest_date(inpath)[1]\n",
-    "view = {'trips.txt': {'service_id': {service_ids}}}\n",
+    "view = {\"trips.txt\": {\"service_id\": {service_ids}}}\n",
     "\n",
     "feed = ptg.load_geo_feed(inpath, view)\n",
     "\n",
@@ -517,6 +515,7 @@
     "import warnings\n",
     "from functools import partial\n",
     "\n",
+    "\n",
     "def split_linestring_with_points(ls: LineString, p: List[Point]) -> List[LineString]:\n",
     "    # get distance projections of points to linestring\n",
     "    with warnings.catch_warnings():\n",
@@ -525,25 +524,46 @@
     "    # sort projections\n",
     "    projections.sort()\n",
     "    # split lineßstring\n",
-    "    lines = [substring(ls, projections[i], projections[i+1]) for i in range(len(projections) - 1)]\n",
+    "    lines = [\n",
+    "        substring(ls, projections[i], projections[i + 1])\n",
+    "        for i in range(len(projections) - 1)\n",
+    "    ]\n",
     "    return lines\n",
     "\n",
+    "\n",
     "def make_edges(df: pd.DataFrame, use_real_route_shapes: bool = True) -> pd.DataFrame:\n",
-    "    df = df.sort_values('stop_sequence')\n",
-    "    res = pd.DataFrame({\n",
-    "        'u': df['stop_id'].values[:-1],\n",
-    "        'v': df['stop_id'].values[1:],\n",
-    "        \"key\": 0,\n",
-    "        \"geometry\": [LineString([df['stop_geometry'].values[i], df['stop_geometry'].values[i+1]]) for i in range(len(df) - 1)],\n",
-    "        \"length\": [df['stop_geometry'].values[i].distance(df['stop_geometry'].values[i+1]) for i in range(len(df) - 1)],\n",
-    "        \"travel_time\": df['departure_time'].values[1:] - df['departure_time'].values[:-1],\n",
-    "    }, index=None)\n",
+    "    df = df.sort_values(\"stop_sequence\")\n",
+    "    res = pd.DataFrame(\n",
+    "        {\n",
+    "            \"u\": df[\"stop_id\"].values[:-1],\n",
+    "            \"v\": df[\"stop_id\"].values[1:],\n",
+    "            \"key\": 0,\n",
+    "            \"geometry\": [\n",
+    "                LineString(\n",
+    "                    [df[\"stop_geometry\"].values[i], df[\"stop_geometry\"].values[i + 1]]\n",
+    "                )\n",
+    "                for i in range(len(df) - 1)\n",
+    "            ],\n",
+    "            \"length\": [\n",
+    "                df[\"stop_geometry\"]\n",
+    "                .values[i]\n",
+    "                .distance(df[\"stop_geometry\"].values[i + 1])\n",
+    "                for i in range(len(df) - 1)\n",
+    "            ],\n",
+    "            \"travel_time\": df[\"departure_time\"].values[1:]\n",
+    "            - df[\"departure_time\"].values[:-1],\n",
+    "        },\n",
+    "        index=None,\n",
+    "    )\n",
     "    if use_real_route_shapes:\n",
-    "        ls = df['trip_geometry'].values[0] # needs error handling for multiple geometries\n",
-    "        edges = split_linestring_with_points(ls, df['stop_geometry'].tolist())\n",
+    "        ls = df[\"trip_geometry\"].values[\n",
+    "            0\n",
+    "        ]  # needs error handling for multiple geometries\n",
+    "        edges = split_linestring_with_points(ls, df[\"stop_geometry\"].tolist())\n",
     "        res = res.assign(geometry=edges)\n",
     "        res = res.assign(length=list(map(lambda x: x.length, edges)))\n",
     "    return res\n",
+    "\n",
     "\n",
     "fast_make_edges = partial(make_edges, use_real_route_shapes=False)"
    ]
@@ -604,37 +624,40 @@
    "source": [
     "def build_edge_and_node_gdf(feed: Feed) -> Tuple[gpd.GeoDataFrame, gpd.GeoDataFrame]:\n",
     "    combined = (\n",
-    "        feed.stop_times[['trip_id', 'stop_id', 'departure_time', 'stop_sequence']]\n",
+    "        feed.stop_times[[\"trip_id\", \"stop_id\", \"departure_time\", \"stop_sequence\"]]\n",
+    "        .merge(feed.trips[[\"trip_id\", \"shape_id\"]], on=\"trip_id\", how=\"left\")\n",
     "        .merge(\n",
-    "            feed.trips[['trip_id', 'shape_id']], \n",
-    "            on='trip_id', \n",
-    "            how='left'\n",
+    "            (\n",
+    "                feed.shapes.rename(columns={\"geometry\": \"trip_geometry\"}).dropna(\n",
+    "                    subset=[\"trip_geometry\"]\n",
+    "                )\n",
+    "            ),\n",
+    "            on=\"shape_id\",\n",
+    "            how=\"left\",\n",
     "        )\n",
     "        .merge(\n",
     "            (\n",
-    "                feed.shapes\n",
-    "                .rename(columns={\"geometry\": \"trip_geometry\"})\n",
-    "                .dropna(subset=['trip_geometry'])\n",
-    "            ), \n",
-    "            on='shape_id', \n",
-    "            how=\"left\"\n",
-    "        )\n",
-    "        .merge(\n",
-    "            (\n",
-    "                feed.stops[['stop_id', 'geometry']]\n",
+    "                feed.stops[[\"stop_id\", \"geometry\"]]\n",
     "                .rename(columns={\"geometry\": \"stop_geometry\"})\n",
-    "                .dropna(subset=['stop_geometry'])\n",
-    "            ), \n",
-    "            on='stop_id', \n",
-    "            how=\"left\"\n",
+    "                .dropna(subset=[\"stop_geometry\"])\n",
+    "            ),\n",
+    "            on=\"stop_id\",\n",
+    "            how=\"left\",\n",
     "        )\n",
     "    )\n",
     "    # confirm each trip only has one associated shape\n",
-    "    print(combined.groupby('trip_id').apply(lambda x: x['shape_id'].nunique()).max() == 1)\n",
-    "    edges_gdf = combined.groupby('trip_id').apply(fast_make_edges).set_index(['u', 'v', 'key']).drop_duplicates()\n",
-    "    nodes_gdf = feed.stops[['stop_id', 'geometry']].set_index('stop_id')\n",
-    "    nodes_gdf['x'] = nodes_gdf['geometry'].x\n",
-    "    nodes_gdf['y'] = nodes_gdf['geometry'].y\n",
+    "    print(\n",
+    "        combined.groupby(\"trip_id\").apply(lambda x: x[\"shape_id\"].nunique()).max() == 1\n",
+    "    )\n",
+    "    edges_gdf = (\n",
+    "        combined.groupby(\"trip_id\")\n",
+    "        .apply(fast_make_edges)\n",
+    "        .set_index([\"u\", \"v\", \"key\"])\n",
+    "        .drop_duplicates()\n",
+    "    )\n",
+    "    nodes_gdf = feed.stops[[\"stop_id\", \"geometry\"]].set_index(\"stop_id\")\n",
+    "    nodes_gdf[\"x\"] = nodes_gdf[\"geometry\"].x\n",
+    "    nodes_gdf[\"y\"] = nodes_gdf[\"geometry\"].y\n",
     "\n",
     "    # attach crs\n",
     "    crs = CRS.from_user_input(4326)\n",
@@ -642,6 +665,7 @@
     "    edges_gdf.crs = crs\n",
     "\n",
     "    return nodes_gdf, edges_gdf\n",
+    "\n",
     "\n",
     "nodes_gdf, edges_gdf = build_edge_and_node_gdf(feed)\n",
     "\n",
@@ -973,11 +997,13 @@
    "source": [
     "# ox.plot_graph(bus_network, figsize=(12, 12), node_size=0.8, edge_linewidth=0.5)\n",
     "m = ox.graph_to_gdfs(bus_network, nodes=False, edges=True).explore(name=\"Routes\")\n",
-    "m = ox.graph_to_gdfs(bus_network, nodes=True, edges=False).explore(m=m, color='red', radius=50, name=\"Stops\")\n",
+    "m = ox.graph_to_gdfs(bus_network, nodes=True, edges=False).explore(\n",
+    "    m=m, color=\"red\", radius=50, name=\"Stops\"\n",
+    ")\n",
     "\n",
     "folium.LayerControl().add_to(m)\n",
     "\n",
-    "m.save('bus_network.html')\n",
+    "m.save(\"bus_network.html\")\n",
     "\n",
     "m"
    ]
@@ -1174,9 +1200,9 @@
     }
    ],
    "source": [
-    "inpath = '../data/google_transit.zip'\n",
+    "inpath = \"../data/google_transit.zip\"\n",
     "service_ids = ptg.read_busiest_date(inpath)[1]\n",
-    "view = {'trips.txt': {'service_id': service_ids}}\n",
+    "view = {\"trips.txt\": {\"service_id\": service_ids}}\n",
     "\n",
     "feed = ptg.load_geo_feed(inpath, view)\n",
     "\n",
@@ -1546,11 +1572,13 @@
    "source": [
     "# ox.plot_graph(bus_network, figsize=(12, 12), node_size=0.8, edge_linewidth=0.5)\n",
     "m = ox.graph_to_gdfs(rail_network, nodes=False, edges=True).explore(name=\"Routes\")\n",
-    "m = ox.graph_to_gdfs(rail_network, nodes=True, edges=False).explore(m=m, color='red', radius=50, name=\"Stops\")\n",
+    "m = ox.graph_to_gdfs(rail_network, nodes=True, edges=False).explore(\n",
+    "    m=m, color=\"red\", radius=50, name=\"Stops\"\n",
+    ")\n",
     "\n",
     "folium.LayerControl().add_to(m)\n",
     "\n",
-    "m.save('rail_network.html')\n",
+    "m.save(\"rail_network.html\")\n",
     "\n",
     "m"
    ]
@@ -1629,7 +1657,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adj = nx.adjacency_matrix(rail_network, weight='travel_time').todense()\n",
+    "adj = nx.adjacency_matrix(rail_network, weight=\"travel_time\").todense()\n",
     "adj = np.where(adj == 0, np.inf, adj)\n",
     "np.fill_diagonal(adj, 0.0)\n",
     "\n",
@@ -1664,12 +1692,16 @@
    "source": [
     "def make_timetable(stop_times: pd.DataFrame) -> pd.DataFrame:\n",
     "    def _rollup(df):\n",
-    "        df = df.sort_values('stop_sequence')\n",
-    "        return pd.DataFrame({\n",
-    "            'from': df['stop_id'].values[:-1],\n",
-    "            'to': df['stop_id'].values[1:],\n",
-    "            \"departure_time\": df['departure_time'].values[:-1],\n",
-    "        }, index=None)\n",
+    "        df = df.sort_values(\"stop_sequence\")\n",
+    "        return pd.DataFrame(\n",
+    "            {\n",
+    "                \"from\": df[\"stop_id\"].values[:-1],\n",
+    "                \"to\": df[\"stop_id\"].values[1:],\n",
+    "                \"departure_time\": df[\"departure_time\"].values[:-1],\n",
+    "            },\n",
+    "            index=None,\n",
+    "        )\n",
+    "\n",
     "    return stop_times.groupby(\"trip_id\").apply(_rollup).reset_index(drop=True)"
    ]
   },
@@ -1702,7 +1734,9 @@
     }
    ],
    "source": [
-    "make_timetable(feed.stop_times).groupby(['from', 'to']).apply(lambda x: sorted(x['departure_time'].values))"
+    "make_timetable(feed.stop_times).groupby([\"from\", \"to\"]).apply(\n",
+    "    lambda x: sorted(x[\"departure_time\"].values)\n",
+    ")"
    ]
   },
   {
@@ -1747,11 +1781,7 @@
    ],
    "source": [
     "B = ox.graph_from_place(\n",
-    "    PLACE, \n",
-    "    retain_all=False, \n",
-    "    truncate_by_edge=True, \n",
-    "    simplify=True, \n",
-    "    network_type='bike'\n",
+    "    PLACE, retain_all=False, truncate_by_edge=True, simplify=True, network_type=\"bike\"\n",
     ")\n",
     "\n",
     "ox.plot_graph(B, node_size=0.8, edge_linewidth=0.5)"
