--- a/notebooks/graph_merge.ipynb
+++ b/notebooks/graph_merge.ipynb
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "ox.plot_graph(G, figsize=(10,10), node_size=0, edge_linewidth=0.1)"
+    "ox.plot_graph(G, figsize=(10, 10), node_size=0, edge_linewidth=0.1)"
    ]
   },
   {
@@ -124,7 +124,7 @@
     }
    ],
    "source": [
-    "ox.plot_graph(W, figsize=(10,10), node_size=0, edge_linewidth=0.1)"
+    "ox.plot_graph(W, figsize=(10, 10), node_size=0, edge_linewidth=0.1)"
    ]
   },
   {
@@ -305,8 +305,10 @@
    "source": [
     "plt.scatter(p.x, p.y)\n",
     "plt.plot(*any_given_edge[2][\"geometry\"].coords.xy)\n",
-    "proj = any_given_edge[2][\"geometry\"].interpolate(any_given_edge[2][\"geometry\"].project(p, normalized=True), normalized=True)\n",
-    "plt.scatter(proj.x, proj.y, label=\"Projected - Shapely\", c='red')"
+    "proj = any_given_edge[2][\"geometry\"].interpolate(\n",
+    "    any_given_edge[2][\"geometry\"].project(p, normalized=True), normalized=True\n",
+    ")\n",
+    "plt.scatter(proj.x, proj.y, label=\"Projected - Shapely\", c=\"red\")"
    ]
   },
   {
@@ -411,7 +413,7 @@
     }
    ],
    "source": [
-    "G_proj.graph['crs'] == W_proj.graph['crs']"
+    "G_proj.graph[\"crs\"] == W_proj.graph[\"crs\"]"
    ]
   },
   {
@@ -933,10 +935,10 @@
     "Ys = []\n",
     "for _id, node in G_proj.nodes(data=True):\n",
     "    print(_id, node)\n",
-    "    if (node['x'] != node['lon']) or (node['y'] != node['lat']):\n",
+    "    if (node[\"x\"] != node[\"lon\"]) or (node[\"y\"] != node[\"lat\"]):\n",
     "        print(\"Mismatched location!\")\n",
-    "    Xs.append(node['x'])\n",
-    "    Ys.append(node['y'])"
+    "    Xs.append(node[\"x\"])\n",
+    "    Ys.append(node[\"y\"])"
    ]
   },
   {
@@ -1592,7 +1594,7 @@
     }
    ],
    "source": [
-    "(W.nodes[any_given_edge[0]]['x'], W.nodes[any_given_edge[0]]['y'])"
+    "(W.nodes[any_given_edge[0]][\"x\"], W.nodes[any_given_edge[0]][\"y\"])"
    ]
   },
   {
@@ -1613,7 +1615,10 @@
     }
    ],
    "source": [
-    "distance(lonlat(G.nodes[any_given_edge[0]]['x'], G.nodes[any_given_edge[0]]['y']), lonlat(G.nodes[any_given_edge[1]]['x'], G.nodes[any_given_edge[1]]['y'])).m"
+    "distance(\n",
+    "    lonlat(G.nodes[any_given_edge[0]][\"x\"], G.nodes[any_given_edge[0]][\"y\"]),\n",
+    "    lonlat(G.nodes[any_given_edge[1]][\"x\"], G.nodes[any_given_edge[1]][\"y\"]),\n",
+    ").m"
    ]
   },
   {
@@ -1646,7 +1651,7 @@
     "temp_graph.add_node(list(W.nodes)[0])\n",
     "temp_graph.add_edge(new_edge[0], new_edge[1], **new_edge[2])\n",
     "\n",
-    "nx.draw_networkx(temp_graph)\n"
+    "nx.draw_networkx(temp_graph)"
    ]
   },
   {
@@ -1656,7 +1661,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def __merge_dicts_on_key(a: dict, b: dict, overwrite_if: Callable[[Any, Any], bool]) -> dict:\n",
+    "def __merge_dicts_on_key(\n",
+    "    a: dict, b: dict, overwrite_if: Callable[[Any, Any], bool]\n",
+    ") -> dict:\n",
     "    \"\"\"Merge dict `b` into dict `a`. When encountering a key that already exists in `a`,\n",
     "    take the values of the conflicting key and compare them using a function `key`.\n",
     "    If the output of the `key` function is True, prefer the original value from `a`.\n",
@@ -1718,8 +1725,8 @@
    "source": [
     "mapping = get_merge_mapping(W, G)\n",
     "all_merges = __merge_dicts_on_key(\n",
-    "        mapping.n2n, mapping.n2e, overwrite_if=lambda a, b: a[-1] < b[-1]\n",
-    "    )\n",
+    "    mapping.n2n, mapping.n2e, overwrite_if=lambda a, b: a[-1] < b[-1]\n",
+    ")\n",
     "all_merges"
    ]
   },
@@ -9238,7 +9245,7 @@
     }
    ],
    "source": [
-    "ox.plot_graph(merged_W, figsize=(10,10), node_size=0, edge_linewidth=0.1)"
+    "ox.plot_graph(merged_W, figsize=(10, 10), node_size=0, edge_linewidth=0.1)"
    ]
   },
   {
