--- a/notebooks/a_star_test.ipynb
+++ b/notebooks/a_star_test.ipynb
@@ -31,13 +31,15 @@
    ],
    "source": [
     "g = nx.Graph()\n",
-    "edges_with_atts = [(1, 2, {'length':5}),\n",
-    "                (1, 3, {'length':11}),\n",
-    "                (2, 4, {'length':4}),\n",
-    "                (2, 5,{'length':7})]\n",
+    "edges_with_atts = [\n",
+    "    (1, 2, {\"length\": 5}),\n",
+    "    (1, 3, {\"length\": 11}),\n",
+    "    (2, 4, {\"length\": 4}),\n",
+    "    (2, 5, {\"length\": 7}),\n",
+    "]\n",
     "g.add_edges_from(edges_with_atts)\n",
     "\n",
-    "lengths = nx.all_pairs_dijkstra_path(g, weight='length', cutoff=8)\n",
+    "lengths = nx.all_pairs_dijkstra_path(g, weight=\"length\", cutoff=8)\n",
     "dict(map(lambda x: (x[0], set(x[1].keys()) - {x[0]}), lengths))"
    ]
   },
@@ -66,7 +68,7 @@
     "layout = nx.spring_layout(g)\n",
     "nx.draw_networkx(g, pos=layout)\n",
     "nx.draw_networkx_edge_labels(g, pos=layout)\n",
-    "plt.axis('off')\n",
+    "plt.axis(\"off\")\n",
     "plt.show()"
    ]
   },
@@ -104,10 +106,10 @@
    "source": [
     "import osmnx as ox\n",
     "\n",
-    "G = ox.graph_from_place('Piedmont, California, USA', network_type='drive')\n",
+    "G = ox.graph_from_place(\"Piedmont, California, USA\", network_type=\"drive\")\n",
     "G = ox.add_edge_speeds(G)\n",
     "G = ox.add_edge_travel_times(G)\n",
-    "ec = ox.plot.get_edge_colors_by_attr(G, attr='travel_time', cmap='coolwarm')\n",
+    "ec = ox.plot.get_edge_colors_by_attr(G, attr=\"travel_time\", cmap=\"coolwarm\")\n",
     "ox.plot_graph(G, edge_color=ec)"
    ]
   },
@@ -126,35 +128,48 @@
    "source": [
     "# Heuristics - Euclidean distance\n",
     "\n",
+    "\n",
     "def heuristic(u, v, G):\n",
     "    u_attrs = G.nodes[u]\n",
     "    v_attrs = G.nodes[v]\n",
-    "    if 'x' in u_attrs and 'y' in u_attrs and 'x' in v_attrs and 'y' in v_attrs:\n",
-    "        (x1, y1) = (u_attrs['x'], u_attrs['y'])\n",
-    "        (x2, y2) = (v_attrs['x'], v_attrs['y'])\n",
+    "    if \"x\" in u_attrs and \"y\" in u_attrs and \"x\" in v_attrs and \"y\" in v_attrs:\n",
+    "        (x1, y1) = (u_attrs[\"x\"], u_attrs[\"y\"])\n",
+    "        (x2, y2) = (v_attrs[\"x\"], v_attrs[\"y\"])\n",
     "        return ((x1 - x2) ** 2 + (y1 - y2) ** 2) ** 0.5\n",
     "    else:\n",
     "        return abs(u - v)\n",
     "\n",
-    "def all_pairs_astar_path(G, time, weight='travel_time'):\n",
+    "\n",
+    "def all_pairs_astar_path(G, time, weight=\"travel_time\"):\n",
     "    paths = {}\n",
     "    for source in G.nodes():\n",
     "        paths[source] = {}\n",
     "        for target in G.nodes():\n",
     "            if source != target:\n",
     "                try:\n",
-    "                    length = nx.astar_path_length(G, source, target, heuristic=lambda u, v: heuristic(u, v, G), weight=weight, cutoff=time)\n",
+    "                    length = nx.astar_path_length(\n",
+    "                        G,\n",
+    "                        source,\n",
+    "                        target,\n",
+    "                        heuristic=lambda u, v: heuristic(u, v, G),\n",
+    "                        weight=weight,\n",
+    "                        cutoff=time,\n",
+    "                    )\n",
     "                    paths[source][target] = length\n",
     "                except nx.NetworkXNoPath:\n",
-    "                    paths[source][target] = float('inf')\n",
+    "                    paths[source][target] = float(\"inf\")\n",
     "    return paths\n",
     "\n",
+    "\n",
     "def get_driveshed_size(G, time=30):\n",
-    "    drivesheds = all_pairs_astar_path(G, time, weight='travel_time')\n",
-    "    reachable_nodes = {node: {nbr for nbr, dist in paths.items() if dist <= time} for node, paths in drivesheds.items()}\n",
+    "    drivesheds = all_pairs_astar_path(G, time, weight=\"travel_time\")\n",
+    "    reachable_nodes = {\n",
+    "        node: {nbr for nbr, dist in paths.items() if dist <= time}\n",
+    "        for node, paths in drivesheds.items()\n",
+    "    }\n",
     "    G = G.copy()\n",
-    "    nx.set_node_attributes(G, reachable_nodes, 'reachable_nodes')\n",
-    "    return G\n"
+    "    nx.set_node_attributes(G, reachable_nodes, \"reachable_nodes\")\n",
+    "    return G"
    ]
   },
   {
@@ -215,9 +230,14 @@
     }
    ],
    "source": [
-    "num_reachable_nodes = dict(map(lambda x: (x[0], len(x[1])), nx.get_node_attributes(G, \"reachable_nodes\").items()))\n",
-    "nx.set_node_attributes(G, num_reachable_nodes, 'num_reachable_nodes')\n",
-    "nd = ox.plot.get_node_colors_by_attr(G, attr='num_reachable_nodes', cmap='viridis')\n",
+    "num_reachable_nodes = dict(\n",
+    "    map(\n",
+    "        lambda x: (x[0], len(x[1])),\n",
+    "        nx.get_node_attributes(G, \"reachable_nodes\").items(),\n",
+    "    )\n",
+    ")\n",
+    "nx.set_node_attributes(G, num_reachable_nodes, \"num_reachable_nodes\")\n",
+    "nd = ox.plot.get_node_colors_by_attr(G, attr=\"num_reachable_nodes\", cmap=\"viridis\")\n",
     "ox.plot_graph(G, node_color=nd, edge_color=ec)"
    ]
   },
