--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -47,13 +47,15 @@
    ],
    "source": [
     "g = nx.Graph()\n",
-    "edges_with_atts = [(1, 2, {'length':5}),\n",
-    "                (1, 3, {'length':11}),\n",
-    "                (2, 4, {'length':4}),\n",
-    "                (2, 5,{'length':7})]\n",
+    "edges_with_atts = [\n",
+    "    (1, 2, {\"length\": 5}),\n",
+    "    (1, 3, {\"length\": 11}),\n",
+    "    (2, 4, {\"length\": 4}),\n",
+    "    (2, 5, {\"length\": 7}),\n",
+    "]\n",
     "g.add_edges_from(edges_with_atts)\n",
     "\n",
-    "lengths = nx.all_pairs_dijkstra_path(g, weight='length', cutoff=8)\n",
+    "lengths = nx.all_pairs_dijkstra_path(g, weight=\"length\", cutoff=8)\n",
     "dict(map(lambda x: (x[0], set(x[1].keys()) - {x[0]}), lengths))"
    ]
   },
@@ -83,7 +85,7 @@
     "layout = nx.spring_layout(g)\n",
     "nx.draw_networkx(g, pos=layout)\n",
     "nx.draw_networkx_edge_labels(g, pos=layout)\n",
-    "plt.axis('off')\n",
+    "plt.axis(\"off\")\n",
     "plt.show()"
    ]
   },
@@ -122,10 +124,10 @@
    "source": [
     "import osmnx as ox\n",
     "\n",
-    "G = ox.graph_from_place('Piedmont, California, USA', network_type='drive')\n",
+    "G = ox.graph_from_place(\"Piedmont, California, USA\", network_type=\"drive\")\n",
     "G = ox.add_edge_speeds(G)\n",
     "G = ox.add_edge_travel_times(G)\n",
-    "ec = ox.plot.get_edge_colors_by_attr(G, attr='travel_time', cmap='coolwarm')\n",
+    "ec = ox.plot.get_edge_colors_by_attr(G, attr=\"travel_time\", cmap=\"coolwarm\")\n",
     "ox.plot_graph(G, edge_color=ec)"
    ]
   },
@@ -137,10 +139,10 @@
    "outputs": [],
    "source": [
     "def get_driveshed_size(G, time=30):\n",
-    "    drivesheds = nx.all_pairs_dijkstra_path(G, weight='travel_time', cutoff=time)\n",
+    "    drivesheds = nx.all_pairs_dijkstra_path(G, weight=\"travel_time\", cutoff=time)\n",
     "    reachable_nodes = dict(map(lambda x: (x[0], set(x[1].keys()) - {x[0]}), drivesheds))\n",
     "    G = G.copy()\n",
-    "    nx.set_node_attributes(G, reachable_nodes, 'reachable_nodes')\n",
+    "    nx.set_node_attributes(G, reachable_nodes, \"reachable_nodes\")\n",
     "    return G"
    ]
   },
@@ -227,9 +229,14 @@
    ],
    "source": [
     "G = get_driveshed_size(G)\n",
-    "num_reachable_nodes = dict(map(lambda x: (x[0], len(x[1])), nx.get_node_attributes(G, \"reachable_nodes\").items()))\n",
-    "nx.set_node_attributes(G, num_reachable_nodes, 'num_reachable_nodes')\n",
-    "nd = ox.plot.get_node_colors_by_attr(G, attr='num_reachable_nodes', cmap='viridis')\n",
+    "num_reachable_nodes = dict(\n",
+    "    map(\n",
+    "        lambda x: (x[0], len(x[1])),\n",
+    "        nx.get_node_attributes(G, \"reachable_nodes\").items(),\n",
+    "    )\n",
+    ")\n",
+    "nx.set_node_attributes(G, num_reachable_nodes, \"num_reachable_nodes\")\n",
+    "nd = ox.plot.get_node_colors_by_attr(G, attr=\"num_reachable_nodes\", cmap=\"viridis\")\n",
     "ox.plot_graph(G, node_color=nd, edge_color=ec)"
    ]
   },
@@ -295,7 +302,17 @@
     "\n",
     "runtimes = []\n",
     "for cutoff in range(10, 60, 5):\n",
-    "    runtime = min(repeat(f'get_driveshed_size(G, time={cutoff})', globals=globals(), repeat=100, number=100)) / 100\n",
+    "    runtime = (\n",
+    "        min(\n",
+    "            repeat(\n",
+    "                f\"get_driveshed_size(G, time={cutoff})\",\n",
+    "                globals=globals(),\n",
+    "                repeat=100,\n",
+    "                number=100,\n",
+    "            )\n",
+    "        )\n",
+    "        / 100\n",
+    "    )\n",
     "    print(f\"Runtime for cutoff {cutoff}: {runtime*1000:.2f} ms\")\n",
     "    runtimes.append(runtime)"
    ]
@@ -333,11 +350,11 @@
     }
    ],
    "source": [
-    "plt.style.use('ggplot')\n",
-    "plt.plot(list(range(10, 60, 5)), list(map(lambda x: x*1000, runtimes)))\n",
-    "plt.xlabel('Cutoff time (minutes)')\n",
-    "plt.ylabel('Runtime (ms)')\n",
-    "plt.title('Runtime as function of drive time')"
+    "plt.style.use(\"ggplot\")\n",
+    "plt.plot(list(range(10, 60, 5)), list(map(lambda x: x * 1000, runtimes)))\n",
+    "plt.xlabel(\"Cutoff time (minutes)\")\n",
+    "plt.ylabel(\"Runtime (ms)\")\n",
+    "plt.title(\"Runtime as function of drive time\")"
    ]
   },
   {
@@ -366,13 +383,19 @@
    "outputs": [],
    "source": [
     "from random import choice\n",
+    "\n",
+    "\n",
     "# pick random node from G\n",
     "def pick_random_subset_of_graph(G, limit=100, verbose=False):\n",
     "    node = choice(list(G.nodes()))\n",
     "    if verbose:\n",
     "        print(f\"Source node: {node}\")\n",
-    "    time_to_each_node = nx.single_source_dijkstra_path_length(G, node, weight='travel_time')\n",
-    "    closest_nodes = list(map(lambda x: x[0], sorted(time_to_each_node.items(), key=lambda x: x[1])))[:limit]\n",
+    "    time_to_each_node = nx.single_source_dijkstra_path_length(\n",
+    "        G, node, weight=\"travel_time\"\n",
+    "    )\n",
+    "    closest_nodes = list(\n",
+    "        map(lambda x: x[0], sorted(time_to_each_node.items(), key=lambda x: x[1]))\n",
+    "    )[:limit]\n",
     "    return G.subgraph(closest_nodes)"
    ]
   },
@@ -470,7 +493,17 @@
     "\n",
     "node_runtimes = []\n",
     "for subset_nodes in range(50, 350, 10):\n",
-    "    runtime = min(repeat(f'sample_subset_of_G_and_get_driveshed(G, subset_nodes={subset_nodes})', globals=globals(), repeat=50, number=50)) / 50\n",
+    "    runtime = (\n",
+    "        min(\n",
+    "            repeat(\n",
+    "                f\"sample_subset_of_G_and_get_driveshed(G, subset_nodes={subset_nodes})\",\n",
+    "                globals=globals(),\n",
+    "                repeat=50,\n",
+    "                number=50,\n",
+    "            )\n",
+    "        )\n",
+    "        / 50\n",
+    "    )\n",
     "    print(f\"Runtime for subset_nodes {subset_nodes}: {runtime*1000:.2f} ms\")\n",
     "    node_runtimes.append(runtime)"
    ]
@@ -508,10 +541,10 @@
     }
    ],
    "source": [
-    "plt.plot(list(range(50, 350, 10)), list(map(lambda x: x*1000, node_runtimes)))\n",
-    "plt.xlabel('Number of nodes')\n",
-    "plt.ylabel('Runtime (ms)')\n",
-    "plt.title('Runtime as function of number of nodes')"
+    "plt.plot(list(range(50, 350, 10)), list(map(lambda x: x * 1000, node_runtimes)))\n",
+    "plt.xlabel(\"Number of nodes\")\n",
+    "plt.ylabel(\"Runtime (ms)\")\n",
+    "plt.title(\"Runtime as function of number of nodes\")"
    ]
   },
   {
